--- a/wakebake/css/style.css
+++ b/wakebake/css/style.css
@@ -223,6 +223,7 @@
     display: flex;
     align-items: center;
     max-width: 200px;
+    width: 100%;
     gap: 10px;
     font-family: var(--font-family);
     font-weight: 400;
